changed postgresql server IP in jdbc_url

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,6 +1,6 @@
 db.driver=org.postgresql.Driver
 db.entity.package=com.web.app.model
 
-db.url=jdbc:postgresql://localhost:5432/db_webapp
+db.url=jdbc:postgresql://127.10.42.130:5432/db_webapp
 db.username=db_user
 db.password=password
